# src/StoryBooks.Api/swagger.json
@@ -40,6 +40,11 @@
           "text/json",
           "application/*+json"
         ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
         "parameters": [
           {
             "name": "updateDto",
@@ -53,12 +58,45 @@
         ],
         "responses": {
           "200": {
-            "description": ""
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/CampaignDto"
+            }
           }
         }
       }
     },
-    "/api/campaigns/:id/:partitionKey": {
+    "/api/campaigns/:id": {
+      "get": {
+        "tags": [
+          "Campaign"
+        ],
+        "operationId": "Campaign_Get",
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "query",
+            "required": true,
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/CampaignDto"
+            }
+          }
+        }
+      },
       "put": {
         "tags": [
           "Campaign"
@@ -76,13 +114,6 @@
             "in": "query",
             "required": true,
             "format": "guid",
-            "x-nullable": false
-          },
-          {
-            "type": "string",
-            "name": "partitionKey",
-            "in": "query",
-            "required": true,
             "x-nullable": false
           },
           {
@@ -169,6 +200,39 @@
       "enum": [
         "InProgress"
       ]
+    },
+    "CampaignDto": {
+      "type": "object",
+      "required": [
+        "id",
+        "partitionKey",
+        "name",
+        "status",
+        "creationDate",
+        "modificationDate"
+      ],
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "partitionKey": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "status": {
+          "$ref": "#/definitions/CampaignStatus"
+        },
+        "creationDate": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "modificationDate": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
     },
     "CampaignUpdateDto": {
       "type": "object",
